WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240059
CoreAudioCaptureSource::settingsDidChange should not reconfigure the audio unit if CoreAudioCaptureSource is not started
https://bugs.webkit.org/show_bug.cgi?id=240059
Summary
CoreAudioCaptureSource::settingsDidChange should not reconfigure the audio un...
youenn fablet
Reported
2022-05-04 02:47:56 PDT
CoreAudioCaptureSource::settingsDidChange should not reconfigure the audio unit if CoreAudioCaptureSource is not started. This might trigger debug ASSERT hasClients() in CoreAudioSharedUnit::setupAudioUnit in case the audio unit is running for only rendering audio.
Attachments
Patch
(1.73 KB, patch)
2022-05-04 02:51 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(3.52 KB, patch)
2022-05-09 02:36 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2022-05-04 02:51:23 PDT
Created
attachment 458783
[details]
Patch
youenn fablet
Comment 2
2022-05-09 02:36:51 PDT
Created
attachment 459038
[details]
Patch
EWS
Comment 3
2022-05-09 07:06:31 PDT
Committed
r293972
(
250410@main
): <
https://commits.webkit.org/250410@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 459038
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-05-09 07:07:15 PDT
<
rdar://problem/92958589
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug